<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black">

<!--    <TextView-->
<!--        android:id="@+id/home"-->
<!--        android:layout_width="wrap_content"-->
<!--        android:layout_height="wrap_content"-->
<!--        android:layout_centerInParent="true"-->
<!--        android:textSize="25sp"-->
<!--        android:text="Home fragment"-->
<!--        android:textColor="@color/white"/>-->
<!--    <Button-->
<!--        android:layout_width="wrap_content"-->
<!--        android:layout_height="wrap_content"-->
<!--        android:id="@+id/button1"/>-->

    <Spinner
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/spinner1"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="50dp"
        android:layout_marginTop="20dp"/>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/spinner1"
        android:id="@+id/imieNumer">
        <EditText
            android:id="@+id/SMSEDITTEXT"
            android:layout_width="140dp"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_marginStart="20dp"
            android:layout_centerVertical="true"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="20dp"
            android:layout_marginBottom="10dp"
            android:hint="@string/numer_telefonu"
            android:inputType="phone" />
        <EditText
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:id="@+id/imie"
            android:hint="@string/imie"
            android:layout_toRightOf="@+id/SMSEDITTEXT"
            android:layout_centerVertical="true" />
    </RelativeLayout>



    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/imieNumer"
        android:id="@+id/odilosci">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginStart="20dp"
            android:textColor="#808080"
            android:text="@string/ilosc"
            android:id="@+id/ilosc"
            />

        <com.google.android.material.slider.Slider
            android:id="@+id/slider"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"

            android:layout_centerVertical="true"
            android:layout_toRightOf="@+id/ilosc"
            android:layout_marginEnd="20dp"

            android:stepSize="1"
            android:valueFrom="0"
            android:valueTo="5" />

    </RelativeLayout>





    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/DODATKI"
        android:layout_below="@+id/odilosci"
        android:text="@string/DODATKI"
        android:textColor="#808080"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="15dp"/>

    <CheckBox
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/checkbox_myszki"
        android:layout_below="@+id/DODATKI"
        android:layout_marginTop="15dp"
        android:layout_marginStart="20dp"
        android:text="@string/myszki"/>

    <Spinner
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/spinner2"
        android:layout_below="@+id/checkbox_myszki"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="50dp"
        android:layout_marginTop="20dp"/>

    <CheckBox
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/checkbox_klawiatury"
        android:layout_below="@+id/spinner2"
        android:layout_marginTop="20dp"
        android:layout_marginStart="20dp"
        android:text="@string/klawiatury"/>

    <Spinner
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/spinner3"
        android:layout_below="@+id/checkbox_klawiatury"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="50dp"
        android:layout_marginTop="20dp"/>


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/PODSUMOWANIE"
        android:layout_below="@+id/spinner3"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:textColor="#808080"
        android:text="@string/podsumowanie"/>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/PODSUMOWANIE">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/cena"
        android:layout_centerVertical="true"
        android:layout_marginStart="20dp"
        android:textColor="#808080"
        android:layout_marginTop="20dp"
        android:text="@string/koszt"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/przycisk_kup"
        android:layout_alignParentRight="true"
        android:layout_marginEnd="20dp"
        android:layout_centerVertical="true"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:text="@string/kup"/>
        />
    </RelativeLayout>

</RelativeLayout>