<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/black">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/podmenu">

        <ImageButton
            android:layout_width="65dp"
            android:layout_height="65dp"
            android:src="@drawable/ic_baseline_arrow_back_24"
            android:id="@+id/imagebutton"
            android:background="#808080"/>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_toRightOf="@+id/imagebutton"
            android:layout_height="65dp">
            <TextView
                android:id="@+id/home"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:textSize="25sp"
                android:textAlignment="center"
                android:layout_centerVertical="true"
                android:gravity="center"
                android:textStyle="bold"
                android:text="@string/twoje_zamowienie"
                android:textColor="#808080"/>
        </RelativeLayout>
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/podmenu"
        android:layout_marginTop="20dp">

        <ImageView
            android:layout_width="wrap_content"
            android:id="@+id/zdjecieZakupu"
            android:layout_marginTop="30dp"
            android:layout_centerHorizontal="true"
            android:layout_height="100dp"/>

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:cardCornerRadius="15dp"
            android:layout_below="@+id/zdjecieZakupu"
            app:cardMaxElevation="10dp"
            android:layout_marginTop="30dp"
            android:id="@+id/card1">
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/gradient">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textAlignment="center"
                    android:gravity="center"
                    android:textSize="20sp"
                    android:textColor="#808080"
                    android:id="@+id/zamowienie"
                    />
            </RelativeLayout>
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:cardCornerRadius="15dp"
            app:cardMaxElevation="10dp"
            android:layout_marginTop="30dp"
            android:layout_below="@+id/card1"
            android:id="@+id/card2">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/gradient">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="20sp"
                android:gravity="center"
                android:textAlignment="center"
                android:textColor="#808080"
                android:id="@+id/cenaZaZamowienie"
                />
        </RelativeLayout>
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:cardCornerRadius="15dp"
            app:cardMaxElevation="10dp"
            android:id="@+id/card3"
            android:layout_marginTop="30dp"
            android:layout_below="@id/card2">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/gradient">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:textAlignment="center"
                android:textSize="20sp"
                android:textColor="#808080"
                android:id="@+id/iloscZamowienia"
                />
        </RelativeLayout>
        </androidx.cardview.widget.CardView>


        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:cardCornerRadius="15dp"
            app:cardMaxElevation="10dp"
            android:layout_marginTop="30dp"
            android:id="@+id/card4"
            android:layout_below="@id/card3">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/gradient">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:textSize="20sp"
                android:textAlignment="center"
                android:textColor="#808080"
                android:id="@+id/uzytkownik"
                />
        </RelativeLayout>
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:cardCornerRadius="15dp"
            app:cardMaxElevation="10dp"
            android:layout_marginTop="30dp"
            android:id="@+id/card5"
            android:layout_below="@id/card4">
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/gradient">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:textSize="20sp"
                    android:textAlignment="center"
                    android:textColor="#808080"
                    android:id="@+id/dataZamowienia"
                    />
            </RelativeLayout>
        </androidx.cardview.widget.CardView>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/card5"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="30dp"
            android:text="@string/share"
            android:id="@+id/share"/>

<!--        <TextView-->
<!--            android:layout_width="wrap_content"-->
<!--            android:layout_height="wrap_content"-->
<!--            android:layout_above="@+id/dziekujemy"-->
<!--            android:textStyle="bold"-->
<!--            android:id="@+id/nieZakpiono"-->
<!--            android:textSize="30sp"-->
<!--            android:textColor="#808080"/>-->
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="30dp"
            android:layout_alignParentBottom="true"
            android:id="@+id/dziekujemy"
            android:textColor="#808080"
            android:text="@string/dziekujemy_za_zakup"
            android:textStyle="bold"
            android:layout_marginTop="10dp"
            android:textSize="25sp"/>
    </RelativeLayout>


</RelativeLayout>